Fix : Input height on mobile

--- a/src/components/molecules/select.css
+++ b/src/components/molecules/select.css
@@ -111,6 +111,10 @@
         height: 50px;
     }
 
+    .select-container .content input {
+        height: 50%;
+    }
+
     .select-container .content input::placeholder {
         font-size: 18px;
     }
